# gnu_cim

./: .gitignore  AUTHORS  CMakeLists.txt  IAFA-PACKAGE  INSTALL.DOS  Makefile.am  Makefile.dos  Makefile.in  NEWS  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  cconst.h  cdekl.c  cdekl.h  cextern.h  cextspec.c  cfeil.c  cgen.c  cgen.h  cgenexp.c  cgenpar.c  cgenstr.c  cim.1  cim.dvi  cim.h  cim.info  cim.lsm  cim.ps  cim.spec  cim.spec.in  cim.texi  cim2latex  cim2ps  cimetags  cimindent  clex.c  cmell.h  (+37 more)
doc/: .gitignore  Makefile.am  Makefile.in  SIMULA-HISTORY  cim.info  cim.texi
examples/: .gitignore  Makefile  chess-master-two-slaves.sim  chess-two-masters.sim  chess-with-classes.sim  chess.sim  chess1.sim  chess2.sim  chess3.sim  demo-simset.sim  for-loop.sim  gcd.sim  geometry.sim  hello.sim  noughts-and-crosses.sim  ns1.sim  readme  readme.txt  right-text.sim  sim-active-customer.sim  sim-active-server.sim  sim-interview.sim  sim-man-machine.sim  sim-nested.sim  sim-office.sim  sime1.sim  sime2.sim  sime3.sim  simeset.sim  simexac.sim  simexas.sim  simproc1.sim  simproc2.sim  simset.pas  stacks.pas  stacks.sim  test-geom.sim  test-stacks-char.sim  test-stacks-var.sim  testfor.sim  (+5 more)
lib/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  absi.c  absr.c  addepsilon.c  addroffirstchar.c  addroffirstelem.c  align.h  arccos.c  arcsin.c  arctan.c  arctan2.c  argc.c  argv.c  b.c  be.c  blanks.c  bytesize.c  ca.c  call.c  ccb.c  char.c  cim.h  clocktime.c  conc.c  copy.c  copyarrtoc.c  copytextarrtoc.c  copytexttoc.c  cos.c  cosh.c  cotan.c  cp.c  cpb.c  cpp.c  cprb.c  cprbb.c  cputime.c  (+216 more)
man/: Makefile.am  Makefile.in  cim.1  cim.txt
src/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  builder.h  checker.h  cimcomp.c  cimcomp.h  computeconst.c  const.h  dekl.c  dekl.h  dump.c  dump.h  error.c  error.h  expbuilder.c  expchecker.c  expgen.c  expmacros.h  extspec.c  extspec.h  feil.c  feil.h  filelist.c  filelist.h  gen.c  gen.h  genexp.c  genline.c  genpar.c  genstr.c  getopt.c  getopt.h  getopt1.c  lex.c  lex.h  linegen.c  mapline.c  mapline.h  (+27 more)
test/: .gitignore  Makefile.am  Makefile.in  hello.sim  test.sim
util/: .gitignore  Makefile.am  Makefile.in  cim2latex.in  cim2ps.in  cimindent.in
