include_directories(
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_BINARY_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
)

#
# Build cim library
#
add_library(cim STATIC
    sysin.c
    sysout.c
    syserr.c
    copytexttoc.c
    addroffirstchar.c
    addroffirstelem.c
    copytextarrtoc.c
    copyarrtoc.c
    mod.c
    rem.c
    signr.c
    signdr.c
    signi.c
    signdi.c
    signdx.c
    entier.c
    intrea.c
    powii.c
    powri.c
    pow.c
    addepsilon.c
    subepsilon.c
    absr.c
    absi.c
    sqrt.c
    sin.c
    cos.c
    tan.c
    cotan.c
    arcsin.c
    arccos.c
    arctan.c
    arctan2.c
    sinh.c
    cosh.c
    tanh.c
    ln.c
    log10.c
    exp.c
    mint.c
    minc.c
    minr.c
    mini.c
    maxt.c
    maxc.c
    maxr.c
    maxi.c
    simulaid.c
    datetime.c
    cputime.c
    clocktime.c
    lowerbound.c
    upperbound.c
    draw.c
    randint.c
    uniform.c
    normal.c
    negexp.c
    poisson.c
    erlang.c
    discrete.c
    linear.c
    histd.c
    histo.c
    terror.c
    filename.c
    isopen.c
    setaccess.c
    leftshift.c
    field.c
    setpos.c
    pos.c
    more.c
    length.c
    dlocation.c
    dendfile.c
    dlocked.c
    dcheckpoint.c
    dunlock.c
    dlock.c
    dopen.c
    dclose.c
    dlocate.c
    dlastloc.c
    dmaxloc.c
    dinimage.c
    doutimage.c
    ddeleteimage.c
    iendfile.c
    iopen.c
    iclose.c
    iinimage.c
    iinrecord.c
    iinchar.c
    ilastitem.c
    iintext.c
    iinint.c
    iinreal.c
    iinfrac.c
    oopen.c
    oclose.c
    ooutimage.c
    ooutrecord.c
    obreakoutimage.c
    ooutchar.c
    oouttext.c
    ooutint.c
    ooutfix.c
    ooutreal.c
    ooutfrac.c
    pline.c
    ppage.c
    popen.c
    pclose.c
    plinesperpage.c
    pspacing.c
    peject.c
    poutimage.c
    poutrecord.c
    bytesize.c
    ibendfile.c
    ibopen.c
    ibclose.c
    ibinbyte.c
    ibintext.c
    obopen.c
    obclose.c
    oboutbyte.c
    obouttext.c
    dbendfile.c
    dblocation.c
    dbmaxloc.c
    dblocked.c
    dbunlock.c
    dblock.c
    dbopen.c
    dbclose.c
    dblastloc.c
    dblocate.c
    dbinbyte.c
    dboutbyte.c
    dbintext.c
    dbouttext.c
    tsglob.c
    start.c
    printfilline.c
    error.c
    warning.c
    trace.c
    systemerror.c
    initier.c
    ss.c
    rs.c
    cp.c
    cpp.c
    cpb.c
    ccb.c
    ep.c
    epp.c
    oa.c
    cprb.c
    cprbb.c
    b.c
    be.c
    resume.c
    exchange.c
    detach.c
    call.c
    goto.c
    enddecl.c
    inner.c
    endclass.c
    ca.c
    in.c
    rin.c
    is.c
    gbc.c
    ct.c
    eth.c
    getav.c
    getcbv.c
    getrv.c
    getta.c
    gettv.c
    getproc.c
    getlab.c
    geta.c
    getsa.c
    dump.c
    argc.c
    argv.c
    return.c
    tconstant.c
    tstart.c
    tlength.c
    tmain.c
    tpos.c
    tmore.c
    tsub.c
    tstrip.c
    tsetpos.c
    tgetchar.c
    tgetint.c
    tgetreal.c
    tgetfrac.c
    tputchar.c
    tputint.c
    tputfix.c
    tputreal.c
    tputfrac.c
    copy.c
    conc.c
    blanks.c
    textvalassign.c
    textassign.c
    eqrtext.c
    eqtext.c
    lttext.c
    letext.c
    char.c
    isochar.c
    rank.c
    isorank.c
    digit.c
    letter.c
    lowten.c
    decimalmark.c
    upcase.c
    lowcase.c
    simfile.c
    simenvir.c
    xmalloc.c
    simset.c
    simulation.c
    rdiv0.c
    idiv0.c
)

#TODO: compile simset.sim into simset.c
#gnucim -H -L -L. -I. -S simset.sim

#TODO: compile simulation.sim into simulation.c
#gnucim -H -L -L. -I. -S simulation.sim

#
# Install the library.
#
install(TARGETS cim DESTINATION lib)
install(FILES libcim-atr.a DESTINATION lib)
install(FILES cim.h DESTINATION include)

#TODO: install simfile.o simenvir.o
